--- a/index.html
+++ b/index.html
@@ -118,8 +118,9 @@
     </div>
 
     <header>
+    <header>
         <div class="logo">
-            <img src="wsl-logo.png" alt="WSL Logo">
+            <img src="https://Scompi-stack.github.io/wsl_guide/images/wsl-logo.png" alt="WSL Logo">
         </div>
     </header>
     
