--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     </section>
     
     <footer>
-        <p>&copy; 2025 WSL Guide - All rights reserved.</p>
+        <p>&copy; TMSP SAP 21/03/2025 - All rights reserved.</p>
     </footer>
 
     <script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
